logs/offboard_pkg/build.make.480.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::gps_mission_init(double&, geometry_msgs::Quaternion&, Eigen::Vector3d&, MultiBody::mission_type)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:182:13: error: ‘Init_lla_line’ was not declared in this scope; did you mean ‘Init_lla_circle’?
  182 |             Init_lla_line(yaw_d, lla_lead0);
      |             ^~~~~~~~~~~~~
      |             Init_lla_circle
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: At global scope:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:380:6: error: no declaration matches ‘void MultiBody::Init_lla_line(double, Eigen::Vector3d&)’
  380 | void MultiBody::Init_lla_line(double yaw_d, Eigen::Vector3d &lla_lead0)
      |      ^~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:380:6: note: no functions named ‘void MultiBody::Init_lla_line(double, Eigen::Vector3d&)’
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:5:7: note: ‘class MultiBody’ defined here
    5 | class MultiBody
      |       ^~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
